--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /.idea/modules.xml
 /.idea/codeStyles/Project.xml
 /.idea/vcs.xml
+/.idea/compiler.xml
+/.idea/encodings.xml
+/.idea/jarRepositories.xml
+/.idea/scala_compiler.xml
